<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wintelbd.digitalcenter.OfficersActivity"
    android:background="@drawable/background_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/off_toolbar"
                app:theme="@style/ThemeToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/colorPrimaryDark"
                app:titleTextAppearance="@style/Toolbar.TitleText"/>


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/a2i"
                    android:src="@drawable/a2i_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2i" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/zela_prosasok"
                    android:src="@drawable/dcommi_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zela_prosasok" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/upozela_nirbahi"
                    android:src="@drawable/uzo_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upozela_nirbahi" />
            </LinearLayout>

        </LinearLayout>

        <!-- one end -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/sohokari_commisioner_vomi"
                    android:src="@drawable/adcommi_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sohokari_comi" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/union_vomi_sohokari"
                    android:src="@drawable/ula_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/union_vomi" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/up_chairman"
                    android:src="@drawable/upc_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_chair" />
            </LinearLayout>

        </LinearLayout>


        <!-- two end -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/up_shochib"
                    android:src="@drawable/ups_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_sochib" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/poros_uddogata"
                    android:src="@drawable/me_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uddokta_male" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/mohila_uddogta"
                    android:src="@drawable/fe_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uddokta_female" />
            </LinearLayout>

        </LinearLayout>

        <!-- end 3-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/oc"
                    android:src="@drawable/police_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oc" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/kazi"
                    android:src="@drawable/kazi_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kazi" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/haspatal"
                    android:src="@drawable/hopital_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haspatal" />
            </LinearLayout>

        </LinearLayout>

        <!-- end 4-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/fire_service"
                    android:src="@drawable/fire_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fire_service" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="32dp">

                <ImageView
                    style="@style/imageIconStyle"
                    android:id="@+id/madok"
                    android:src="@drawable/drugs_icon" />

                <TextView
                    style="@style/iconTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/madok" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    </ScrollView>

</LinearLayout>
