<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wintelbd.digitalcenter.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/background_image">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="354dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:id="@+id/officers_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/officers_icon" />

        <TextView
            style="@style/iconTextStyle"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/officers" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="354dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/websites_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/websites_icon" />

        <TextView
            style="@style/iconTextStyle"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/hotline_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/hotlines_icon" />

        <TextView
            style="@style/iconTextStyle"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotline" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>
